modified some files

--- a/index.html
+++ b/index.html
@@ -81,6 +81,65 @@
             </div>
         </div>
         <br>
+       
+        <div style="text-align:center">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
+
+        <div class="box">
+            <h1>Mens's Footware <button>View All</button></h1>
+            <hr>
+          <div class="contentcombo">
+            <div class="content">
+                <img src="IMG/5.webp" alt="">
+                <p>From 900Rs</p>
+                <p>Running shoes</p>
+            </div>
+           
+            <div class="content">
+                <img src="IMG/6.webp" alt="">
+                <p>From 900Rs</p>
+                <p>Running shoes</p>
+            </div>
+            <div class="content">
+                <img src="IMG/6.webp" alt="">
+                <p>From 900Rs</p>
+                <p>Running shoes</p>
+            </div>
+            <div class="content">
+                <img src="IMG/6.webp" alt="">
+                <p>From 900Rs</p>
+                <p>Running shoes</p>
+            </div>
+            <div class="content">
+                <img src="IMG/6.webp" alt="">
+                <p>From 900Rs</p>
+                <p>Running shoes</p>
+            </div>
+            <div class="content">
+                <img src="IMG/6.webp" alt="">
+                <p>From 900Rs</p>
+                <p>Running shoes</p>
+            </div>
+            <div class="content">
+                <img src="IMG/6.webp" alt="">
+                <p>From 900Rs</p>
+                <p>Running shoes</p>
+            </div>
+            <div class="content">
+                <img src="IMG/6.webp" alt="">
+                <p>From 900Rs</p>
+                <p>Running shoes</p>
+            </div>
+            <div class="content">
+                <img src="IMG/6.webp" alt="">
+                <p>From 900Rs</p>
+                <p>Running shoes</p>
+            </div>
+         </div>   
+        </div>
 
 
     </main>
