modified login buttons

--- a/index.html
+++ b/index.html
@@ -19,17 +19,14 @@
                 <span>Explore <b>Plus</b><img src="IMG/plus.png" alt=""></span>
             </div>
             <div class="search">
-                <input type="text" placeholder="Search here"  name="search"><button><img src="IMG/search.jpg" alt=""></button>
+                <input type="text" placeholder="Search Products And Many More"  name="search">
+                <ion-icon name="search"></ion-icon>
             </div>
-            <div class="loginbtn">
-                <ul>
+            <div class="btns">
+
                     <button><a href="index.html">Login</a></button> 
-                     <select name="" id="">
-                        <option value="">More</option>
-                        <option value="">select.</option>
-                     </select>
-                     <li><a href="about.html">cart</a></li>
-                </ul>
+                    <button><a href="index.html">More</a></button> 
+                    <button><a href="index.html">Cart</a></button> 
             </div>
 
         </nav>
@@ -268,7 +265,6 @@
     <footer class="align-center-all">
         <p>copyright &copy; Flifkart.com</p>
     </footer>
-
 </body>
 
 </html>
