--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div> -->
 
             <div class="mySlides fade">
-                <img src="IMG/slide3.jpg" width="100%">
+                <img src="IMG/slide3.jpg" >
             </div>
         </div>
         <br>
@@ -86,7 +86,8 @@
         </div>
 
         <div class="box">
-            <h2>Mens's Footware <button>View All</button></h2>
+            <h2>Mens's Footware</h2>
+            <button>View All</button>
             <h3>Save Upto 30%</h3>
             <hr>
           <div class="contentcombo">
@@ -146,7 +147,8 @@
         </div>
 
         <div class="box">
-            <h2>Mens's Footware <button>View All</button></h2>
+            <h2>Mens's Footware</h2>
+            <button>View All</button>
             <h3>Save Upto 30%</h3>
             <hr>
           <div class="contentcombo">
@@ -206,7 +208,8 @@
         </div>
 
         <div class="box">
-            <h2>Mens's Footware <button>View All</button></h2>
+            <h2>Mens's Footware </h2>
+            <button>View All</button>
             <h3>Save Upto 30%</h3>
             <hr>
           <div class="contentcombo">
